--- a/src/app/revoketoken/revoketoken.component.html
+++ b/src/app/revoketoken/revoketoken.component.html
@@ -24,8 +24,9 @@
           deletes the particular token from elasticsearch index</p>
 
         <h2 id="requisites">Prerequisites</h2>
-        <p>To revoke a access_token, following is a must have resource</p>
-        <ul>
+        <p>To revoke a access_token, an <a routerLink="/generatetoken"><code
+          class="highlighter-rouge">access_token</code></a> and followings are the must have resources</p>
+    <ul>
           <li><strong>Client - </strong> REST clients are applications capable to consume and
             operate with resources exposed by RESTful servers.</li>
           <li><strong>Endpoint - </strong>The endpoint <code
