search_types added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -91,7 +91,7 @@
                         search</span>
                 </span>
             </a>
-            <a routerLink="/home" class="categories__item categories__item_references">
+            <a routerLink="/types" class="categories__item categories__item_references">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-book"></i></span>
                     <span class="categories__name">References</span>
