--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
-  <div class="wrap">
-      <a href="index.html"><img class="logo" src="assets/img/logo.png"/> </a> </div> 
-</header> 
+    <div class="wrap">
+        <a href="index.html"><img class="img-responsive logo" src="assets/img/logo.png" /> </a>
+    </div>
+</header>
