search params in progress

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -94,15 +94,15 @@
             <a routerLink="/types" class="categories__item categories__item_references">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-book"></i></span>
-                    <span class="categories__name">References</span>
+                    <span class="categories__name">Search Types</span>
                     <span class="categories__desc">Component structure references, classes and JSON
                         Schema</span>
                 </span>
             </a>
-            <a routerLink="/home" class="categories__item categories__item_guides">
+            <a routerLink="/params" class="categories__item categories__item_guides">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-book"></i></span>
-                    <span class="categories__name">References</span>
+                    <span class="categories__name">Search Parametes</span>
                     <span class="categories__desc">Component structure references, classes and JSON
                         Schema</span>
                 </span>
