--- a/src/app/types/types.component.html
+++ b/src/app/types/types.component.html
@@ -30,7 +30,7 @@
         <h4>Empty Search Sample</h4><br />
         <div class="highlighter-rouge">
           <div class="highlight">
-            <p>POST </p>
+            <p>POST _search</p>
             <ngx-json-viewer [json]="emptySearch"></ngx-json-viewer>
           </div>
         </div><br />
@@ -58,7 +58,7 @@
         <h4>Empty Search Sample</h4><br />
         <div class="highlighter-rouge">
           <div class="highlight">
-            <p>POST </p>
+            <p>POST _search</p>
             <ngx-json-viewer [json]="search_keyword"></ngx-json-viewer>
           </div>
         </div><br />
@@ -85,7 +85,7 @@
         <h4>Empty Search Sample</h4><br />
         <div class="highlighter-rouge">
           <div class="highlight">
-            <p>POST </p>
+            <p>POST _search</p>
             <ngx-json-viewer [json]="search_term"></ngx-json-viewer>
           </div>
         </div><br />
@@ -111,7 +111,7 @@
         <h4>Empty Search Sample</h4><br />
         <div class="highlighter-rouge">
           <div class="highlight">
-            <p>POST </p>
+            <p>POST _search</p>
             <ngx-json-viewer [json]="refined_by"></ngx-json-viewer>
           </div>
         </div><br />
@@ -136,7 +136,7 @@
         <h4>Empty Search Sample</h4><br />
         <div class="highlighter-rouge">
           <div class="highlight">
-            <p>POST </p>
+            <p>POST _search</p>
             <ngx-json-viewer [json]="advance_search"></ngx-json-viewer>
           </div>
         </div><br />
