--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="wrap">
       <div class="footer__bar">
           <div class="footer__copy footer_align">
-              &copy; Copyright © 2019 Oceaneering International, Inc
+              &copy; Copyright © 2019 Oceaneering International, Inc.
           </div>
       </div>
   </div>
